test/results/afl-crash-9.owl.stderr
error: unexpected token '0' while parsing grammar

  o a''x'':0p|0r 0@0''0'')0''0''''''0'')''0'']''0e.0i 0('')0l 0@0''0'')0''0'''''
           ~                                                                    

